--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,8 +1,8 @@
-<html lang="en">
-  <head>
-    <title>React Default Project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+  <title>Hello React</title>
 </html>
+<body>
+  <div id="root">App is loading...</div>
+</body>
